<resources>
    <string name="app_name">Kernel Tweaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="apply">Apply</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="onehundred_mb">100 Mb</string>
    <string name="medium_text">Medium Text</string>
    <string name="summaryggg">summaryggg</string>
    <string name="empty">This folder is Empty!</string>
    <string name="qqq">qqq</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="command">Commands list is empty.\n Tap the plus button to add a command</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="android_secure">Android Secure</string>
    <string name="boot">Boot</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="backup_name">Backup Name</string>
    <string name="textview">TextView</string>
    <string name="presets">PRESETS</string>
    <string name="reboot">Reboot</string>
    <string name="no_backups_found">No Backups Found</string>
    <string name="backups_display">The backups you make will be displayed here</string>
    <string name="title_about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_body">
<![CDATA[
        <b>Colorpickercollection Library & Demo</b><br>
        Version %s<br><br>
        <a href="https://github.com/gabrielemariotti/colorpickercollection">Source</a><br><br>
        <a href="https://plus.google.com/114432517923423045208">By Gabriele Mariotti</a><br><br>

    ]]>
    </string>
    <string-array name="menu_entries">
        <item>--Device Info</item>
        <item>Cpu Stats</item>
        <item>Cpu Info</item>
        <item>--SoC Params</item>
        <item>Cpu Parameters</item>
        <item>Gpu Parameters</item>
        <item>UV Table</item>
        <item>--Kernel Params</item>
        <item>Tweaks</item>
        <item>Low Memory Killer</item>
        <item>Virtual Machine</item>
        <item>--Set on boot</item>
        <item>Review Items</item>
        <item>--Utilities</item>
        <item>File Manager</item>
        <item>Backup</item>
        <item>Recovery actions</item>
        <item>--Extra</item>
        <item>Build.prop mods</item>
        <item>Init.d tweaks</item>
        <item>--App Settings/info</item>
        <item>Settings</item>
        <item>Information</item>
    </string-array>
    <string-array name="menu_descs">
        <item>Frequencies time in state</item>
        <item>Informations about CPU</item>
        <item>Tweak CPU Parameters</item>
        <item>Tweak GPU Parameters</item>
        <item>Manage CPU Voltage</item>
        <item>Tweak Kernel Parameters</item>
        <item>Tweak native task killer</item>
        <item>VM Settings</item>
        <item>Review values set at boot</item>
        <item>Manage some file types</item>
        <item>Backup current kernel/recovery</item>
        <item>Execute recovery stuff</item>
        <item>App Settings</item>
        <item>Informations and credits</item>
    </string-array>
    <string-array name="menu_colors">
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
    </string-array>
    <string-array name="flash_dialog">
        <item>Flash Package</item>
    </string-array>
    <string-array name="install_image_dialog">
        <item>Install Boot.img</item>
        <item>Install Recovery.img</item>
    </string-array>
    <string name="bk_recovery">Backup Recovery.img</string>
    <string name="bk_boot">Backup Boot.img</string>
    <string name="bk_boot_desc">Make a backup of current Boot.img on external storage</string>
    <string name="bk_recovery_desc">Make a backup of current Recovery.img on external storage</string>
    <string name="bk_comp">Use Compression</string>
    <string name="bk_md5">Skip MD5 creation</string>
    <string name="list_command_empty">Commands list is empty.\n Tap the plus button to add a command</string>
    <string name="emp_title">EMPTY</string>
    <string name="emp_desc">No Values set at boot</string>
    <string name="rc_title">Root not found</string>
    <string name="rc_desc">Seems your device doesn\'t have root privileges! Please install SuperSU before use this app</string>
    <string name="bb_title">BusyBox not found</string>
    <string name="bb_desc">Your device doesn\'t have BusyBox installed, please install it through PlayStore or XDA before use this app</string>
    <string name="st_cat">Kernel Tweaker settings</string>
    <string name="gift">Just a gift ;)</string>
    <string-array name="lmk_titles">
        <item>FOREGROUND_APP</item>
        <item>VISIBLE_APP</item>
        <item>SECONDARY_SERVER</item>
        <item>HIDDEN_APP</item>
        <item>CONTENT_PROVIDER</item>
        <item>EMPTY_APP</item>
    </string-array>
    <string-array name="lmk_descs">
        <item>The application currently on the screen and running</item>
        <item>The application that is open and running in background</item>
        <item>This is a service an application needs that is alive and ready</item>
        <item>An idle process that wakes up on application request</item>
        <item>Apps that provide data (content) to the system, like Facebook sync</item>
        <item>Apps closed by the users but ready to run</item>
    </string-array>
    <string name="vdd_pref">UV VDD Table</string>
    <string name="vdd_desc">The values you have set inside UV Table page will be applied at boot.\nIf you want to edit these values go to UV Table page.</string>
    <string name="menu_del">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_boot">Set on boot</string>
    <string name="menu_command">Add command</string>
    <string name="menu_less">-25mV</string>
    <string name="menu_plus">+25mV</string>
    <string name="uv_title">UV Table Values</string>
    <string name="cpu_max">CPU Max Frequency</string>
    <string name="cpu_min">CPU Min Frequency</string>
    <string name="cpu_governor">Governor</string>
    <string name="cpu_hotplug">Hotplug</string>
    <string name="cpu_cpuquiet_title">Cpuquiet Governor</string>
    <string name="cpu_cpuquiet_desc">This governor controls which of the CPU cores are available and when.</string>
    <string name="cpu_advanced">Advanced Options</string>
    <string name="cpu_adv_gov_title">Governor Tuning</string>
    <string name="cpu_adv_gov_desc">Fine tune governor parameters</string>
    <string name="cpu_adv_quiet_title">Cpuquiet Governor Tuning</string>
    <string name="cpu_adv_quiet_desc">Fine tune cpuquiet governor parameters</string>
    <string name="gov_title">Tweakable Governor Values</string>
    <string name="gpu_category">GPU parameters</string>
    <string name="gpu_freq_title">GPU Max Frequency</string>
    <string name="gpu_freq_desc">Set GPU maximum frequency</string>
    <string name="menu_glossary">GLOSSARY</string>
    <string name="mpdec_general">Hotplug settings</string>
    <string name="mpdec_enabled">Enable/Disable hotplug</string>
    <string name="mpdec_min_cpu">Minimum CPUs online</string>
    <string name="mpdec_max_cpu">Maximum CPUs online</string>
    <string name="mpdec_scroff_single">Screen off single core</string>
    <string name="mpdec_scroff_single_summary">Use only one core when the screen is off</string>
    <string name="mpdec_touchboost">Touch boost</string>
    <string name="mpdec_touchboost_summary">Touching the screen will boost the cpu for better responsiveness</string>
    <string name="mpdec_boost_time">Touch boost time</string>
    <string name="mpdec_advanced_category">Advanced</string>
    <string name="mpdec_advanced">Advanced settings</string>
    <string name="mpdec_advanced_summary">View or change advance hotplug settings</string>
    <string name="thermal_general">Thermal thresholds</string>
    <string name="thermal_enabled">Enable/Disable thermal</string>
    <string name="thermal_enabled_summary">proceed with caution, if you disable this your phone might overheat due to no thermal throttling</string>
    <string name="thermal_shutdown">Shutdown Temperature</string>
    <string name="thermal_check">Check every (ms)</string>
    <string name="thermal_low_limit">Low limit</string>
    <string name="thermal_low_limit_clear">Low limit clear</string>
    <string name="thermal_mid_limit">Mid limit</string>
    <string name="thermal_mid_limit_clear">Mid limit clear</string>
    <string name="thermal_max_limit">High limit</string>
    <string name="thermal_max_limit_clear">High limit clear</string>
    <string name="thermal_freq">Frequencies</string>
    <string name="thermal_low_freq">Low limit frequency</string>
    <string name="thermal_mid_freq">Mid limit frequency</string>
    <string name="thermal_max_freq">High limit frequency</string>
    <string name="sched_category">I/O Scheduler and TCP Control</string>
    <string name="io_title">I/O Scheduler</string>
    <string name="read_ahead_title">Read Ahead size</string>
    <string name="sched_tuning_title">Scheduler Tuning</string>
    <string name="sched_tuning_summary">Fine tune I/O Scheduler parameters</string>
    <string name="touch_control_cat">Touch control</string>
    <string name="t2w_title">Touch 2 Wake</string>
    <string name="t2w_summary">If enabled, you will be able to turn the screen on if it times out</string>
    <string name="t2w_delay_title">Touch 2 Wake Delay</string>
    <string name="dt2w_title">DoubleTap 2 Wake</string>
    <string name="dt2w_summary">If enabled, you will be able to wake your device with a double tap on the screen</string>
    <string name="s2w_title">Sweep 2 Wake</string>
    <string name="s2w_summary">If enabled, you will be able to wake or turn off the screen by swiping on navigation bar area</string>
    <string name="pwks_title">S2W + DT2W Powerkey suspend</string>
    <string name="pwks_summary">If enabled, using the powerkey to turn screen off will disable Sweep2Wake and DoubleTap 2 Wake</string>
    <string name="wake_timeout_title">Wake timeout</string>
    <string name="misc_cat">Misc</string>
    <string name="fast_charge_title">Fast Charge</string>
    <string name="fast_charge_summary">If enabled, device will charge faster when connected through USB</string>
    <string name="vibration_title">Vibration Intensity</string>
    <string name="dfsync_title">Dynamic Fsync</string>
    <string name="dfsync_summary">Asyncronous Fsync. If enabled gives stock I/O and data integrity, if Disabled you will have more I/O but less data integrity</string>
    <string name="fsync_title">Fsync</string>
    <string name="fsync_summary">If enabled gives stock I/O and data integrity, if Disabled you will have more I/O but less data integrity</string>
    <string name="intelliplug_title">Intelli-Plug</string>
    <string name="intelliplug_summary">In-kernel solution for MPDecision\n(should save battery)</string>
    <string name="eco_mode_title">Eco mode</string>
    <string name="eco_mode_summary">Child of Intelli-plug, will try to use only two cores without loosing performance</string>
    <string name="usb_otg_title">USB OTG</string>
    <string name="usb_otg_summary">Enable or disable usb otg</string>
</resources>