<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_pref_screen" >

    <PreferenceCategory 
        android:title="@string/sched_category"
        android:key="key_sched_cat" >
        <com.dsht.kerneltweaker.CustomListPreference
            android:key="key_cpu_sched"
            android:title="@string/io_title" />
        <com.dsht.kerneltweaker.CustomListPreference
            android:key="key_cpu_readahead"
            android:title="@string/read_ahead_title" />
        <com.dsht.kerneltweaker.CustomPreference
            android:key="key_advanced_scheduler"
            android:summary="@string/sched_tuning_summary"
            android:title="@string/sched_tuning_title" />
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/touch_control_cat"
        android:key="key_touch_cat" >
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_t2w_switch"
            android:summary="@string/t2w_summary"
            android:title="@string/t2w_title" />
        <com.dsht.kerneltweaker.CustomPreference
            android:key="key_t2w_delay_switch"
            android:summary=""
            android:title="@string/t2w_delay_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_dt2w_switch"
            android:summary="@string/dt2w_summary"
            android:title="@string/dt2w_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_dt2w2_switch"
            android:summary="@string/dt2w_summary"
            android:title="@string/dt2w_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_s2w_switch"
            android:summary="@string/s2w_summary"
            android:title="@string/s2w_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_pwks_switch"
            android:summary="@string/pwks_summary"
            android:title="@string/pwks_title" />
	<com.dsht.kerneltweaker.CustomPreference
            android:key="key_wake_timeout_switch"
            android:summary=""
            android:title="@string/wake_timeout_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_kernel_tweaks"
        android:title="@string/misc_cat" >
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_usb_otg"
            android:summary="@string/usb_otg_summary"
            android:title="@string/usb_otg_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_fcharge_switch"
            android:summary="@string/fast_charge_summary"
            android:title="@string/fast_charge_title" />
        <com.dsht.kerneltweaker.CustomPreference
            android:key="key_vibration"
            android:summary=""
            android:title="@string/vibration_title" />

        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_dynfsync_switch"
            android:summary="@string/dfsync_summary"
            android:title="@string/dfsync_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_fsync_switch"
            android:summary="@string/fsync_summary"
            android:title="@string/fsync_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_intelliplug_switch"
            android:summary="@string/intelliplug_summary"
            android:title="@string/intelliplug_title" />
        <com.dsht.kerneltweaker.CustomCheckBoxPreference
            android:key="key_ecomode_switch"
            android:summary="@string/eco_mode_summary"
            android:title="@string/eco_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_sound_category"
        android:title="Sound Tweaks" >
        <com.dsht.kerneltweaker.CustomPreference
            android:key="key_kernel_info"
            android:summary="These tweaks changes gains of microphone speaker and headsets. Values from -20 to 20"
            android:title="Information" />
    </PreferenceCategory>

</PreferenceScreen>
